# sharedmemory

src/: CMakeLists.txt  client.cpp  memorystructure.hpp  server.cpp
